welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:2: error: '<-' expected but ')' found.
for(!estSurBiscuit()){
                    ^BaggleSeeker:9: error: illegal start of simple expression
	}
        ^